# localchat

./: .gitignore  CMakeLists.txt  CODE_STYLE.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md
architecture/modules/: modules.drawio
libs/AlexandreRouma-net/: net.cpp  net.h
src/: main.cpp
src/modules/app/: app.cpp  app.hpp
src/modules/config/: config.cpp  config.hpp
src/modules/discovery/: discovery.cpp  discovery.hpp
src/modules/discovery/internals/: broadcast_receiver.cpp  broadcast_receiver.hpp  broadcast_receiver.tpp  broadcast_sender.cpp  broadcast_sender.hpp
src/modules/protocol/iprotocol/: iprotocol.hpp
src/modules/protocol/iprotocol/internals/: ideserializer.hpp  iserializer.hpp  message.hpp
src/modules/protocol/jsonprotocol/: jsonprotocol.cpp  jsonprotocol.hpp
src/modules/transport/itransport/: itransport.hpp  itransport_server.cpp  itransport_server.hpp
src/modules/transport/jsontransport/: jsontransport.cpp  jsontransport.hpp
src/modules/ui/: ui.cpp  ui.hpp  ui.tpp
